stoat/src/snapshots/stoat__test_harness__review_move_cross_indent.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: normal
size: 140x20
---
[0m[38;2;229;192;123m[48;2;40;44;52mnest.rs --- 1/1 --- rust[0m[38;2;250;250;250m[48;2;40;44;52m                                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                          [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m fn outer() [0m[38;2;152;195;121m[48;2;40;44;52m{}[0m[38;2;250;250;250m[48;2;40;44;52m                                                       [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m fn outer() {         [0m[38;2;99;109;131m[48;2;40;44;52m┌ review ───────────────────────────────────────────────────────────────────────────────────────────────────────┐[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52mrelocated[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52mc[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mEsc, q[0m[38;2;250;250;250m[48;2;40;44;52m   close the active review    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                [0m[38;2;86;182;194m[48;2;40;44;52mC-b, C-u[0m[38;2;250;250;250m[48;2;40;44;52m   move cursor up half a page                   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m }                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m   Tab[0m[38;2;250;250;250m[48;2;40;44;52m   toggle between the diff and the plain file   [0m[38;2;86;182;194m[48;2;40;44;52mC-f, C-d[0m[38;2;250;250;250m[48;2;40;44;52m   move cursor down half a page                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     n[0m[38;2;250;250;250m[48;2;40;44;52m   advance to the next review chunk[0m[38;2;99;109;131m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m            [0m[38;2;86;182;194m[48;2;40;44;52m Home, 0[0m[38;2;250;250;250m[48;2;40;44;52m   goto line start                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     p[0m[38;2;250;250;250m[48;2;40;44;52m   step back to the previous review chunk       [0m[38;2;86;182;194m[48;2;40;44;52m     End[0m[38;2;250;250;250m[48;2;40;44;52m   goto line end                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m5[0m[38;2;250;250;250m[48;2;40;44;52m fn wrapper() {       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     m[0m[38;2;250;250;250m[48;2;40;44;52m   jump to the source of a moved hunk           [0m[38;2;86;182;194m[48;2;40;44;52m       s[0m[38;2;250;250;250m[48;2;40;44;52m   mark the current chunk as staged             [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m6[0m[38;2;250;250;250m[48;2;40;44;52m     println!("hello")[0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     M[0m[38;2;250;250;250m[48;2;40;44;52m   jump to the target of a moved hunk           [0m[38;2;86;182;194m[48;2;40;44;52m       u[0m[38;2;250;250;250m[48;2;40;44;52m   mark the current chunk as unstaged           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m7[0m[38;2;250;250;250m[48;2;40;44;52m }                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     h[0m[38;2;250;250;250m[48;2;40;44;52m   move cursor left           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                [0m[38;2;86;182;194m[48;2;40;44;52m     Spc[0m[38;2;250;250;250m[48;2;40;44;52m   toggle staged/unstaged for the current chunk [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     j[0m[38;2;250;250;250m[48;2;40;44;52m   move cursor down                             [0m[38;2;86;182;194m[48;2;40;44;52m       S[0m[38;2;250;250;250m[48;2;40;44;52m   skip the current chunk                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     k[0m[38;2;250;250;250m[48;2;40;44;52m   move cursor up                               [0m[38;2;86;182;194m[48;2;40;44;52m       A[0m[38;2;250;250;250m[48;2;40;44;52m   apply staged chunks                          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     l[0m[38;2;250;250;250m[48;2;40;44;52m   move cursor right                            [0m[38;2;86;182;194m[48;2;40;44;52m       D[0m[38;2;250;250;250m[48;2;40;44;52m   remove staged hunks from the reviewed commit [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     w[0m[38;2;250;250;250m[48;2;40;44;52m   select to next word start                    [0m[38;2;86;182;194m[48;2;40;44;52m       r[0m[38;2;250;250;250m[48;2;40;44;52m   rescan the review source                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     e[0m[38;2;250;250;250m[48;2;40;44;52m   select to next word end                      [0m[38;2;86;182;194m[48;2;40;44;52m       :[0m[38;2;250;250;250m[48;2;40;44;52m   open the command palette                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m     b[0m[38;2;250;250;250m[48;2;40;44;52m   select to previous word start                                                                        [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│───────────────────────────────────────────────────────────────────────────────────────────────────────────────│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m 1/1 · 0 staged · 0 unstaged · 1 pending                                                                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                           [0m[38;2;99;109;131m[48;2;40;44;52m└───────────────────────────────────────────────────────────────────────────────────────────────────────────────┘[0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch] [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────────────────────────────────────────────────────────────────────────────────────────────[0m
