stoat/src/snapshots/stoat__test_harness__review_move_straight.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: normal
size: 100x20
---
[0m[38;2;229;192;123m[48;2;40;44;52mswap.rs --- 1/1 --- rust[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                  [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m fn [0m[3m[38;2;86;182;194m[48;2;40;44;52malpha()[0m[38;2;250;250;250m[48;2;40;44;52m {  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 7[0m[38;2;250;250;250m[48;2;40;44;52m                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52mx[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m;  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 7[0m[38;2;250;250;250m[48;2;40;44;52m                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52my[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m;  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 7[0m[38;2;250;250;250m[48;2;40;44;52m                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52mz[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m;  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 7[0m[38;2;250;250;250m[48;2;40;44;52m                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m5[0m[38;2;250;250;250m[48;2;40;44;52m }                                          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m fn beta() {                                 [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m6[0m[38;2;250;250;250m[48;2;40;44;52m                                            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m     let p = 10;                             [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m7[0m[38;2;250;250;250m[48;2;40;44;52m fn beta() {                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m     let q = 20;                             [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m8[0m[38;2;250;250;250m[48;2;40;44;52m     let p = 10;                            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m4[0m[38;2;250;250;250m[48;2;40;44;52m     let r = 30;                             [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m9[0m[38;2;250;250;250m[48;2;40;44;52m     let q = 20;                            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m5[0m[38;2;250;250;250m[48;2;40;44;52m }                                           [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m10[0m[38;2;250;250;250m[48;2;40;44;52m     let r = 30;                            [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m6[0m[38;2;250;250;250m[48;2;40;44;52m                                             [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m7[0m[38;2;250;250;250m[48;2;40;44;52m fn [0m[3m[38;2;86;182;194m[48;2;40;44;52malpha()[0m[38;2;250;250;250m[48;2;40;44;52m {  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 1[0m[38;2;250;250;250m[48;2;40;44;52m                          [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m8[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52mx[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m;  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 1[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m9[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52my[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m;  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 1[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m10[0m[38;2;250;250;250m[48;2;40;44;52m     let [0m[3m[38;2;86;182;194m[48;2;40;44;52mz[0m[38;2;250;250;250m[48;2;40;44;52m = [0m[3m[38;2;86;182;194m[48;2;40;44;52m3[0m[38;2;250;250;250m[48;2;40;44;52m;  [0m[3m[38;2;86;182;194m[48;2;40;44;52m<- 1[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m11[0m[38;2;250;250;250m[48;2;40;44;52m }                                          [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m  [0m[38;2;99;109;131m[48;2;40;44;52m11[0m[38;2;250;250;250m[48;2;40;44;52m }                                           [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                    [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch] [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────────────────────────────────────────────────────[0m
