stoat/src/snapshots/stoat__test_harness__review_multi_file.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: open_review
focused: #1 of 1
mode: normal
size: 80x16
---
[0m[38;2;229;192;123m[48;2;40;44;52ma.rs --- 1/1 --- rust[0m[38;2;250;250;250m[48;2;40;44;52m                  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m fn [0m[38;2;224;108;117m[48;2;40;44;52ma[0m[38;2;250;250;250m[48;2;40;44;52m() {}                        [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;86;182;194m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m   [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m fn a[0m[38;2;152;195;121m[48;2;40;44;52m_renamed[0m[38;2;250;250;250m[48;2;40;44;52m() {}                 [0m
[0m[38;2;229;192;123m[48;2;40;44;52mb.rs --- 1/1 --- rust[0m[38;2;250;250;250m[48;2;40;44;52m                  [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m let x = 1;                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m let x = 1;                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m    [0m[38;2;99;109;131m[48;2;40;44;52m2[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52mlet[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52my[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52m=[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;152;195;121m[48;2;40;44;52m2;[0m[38;2;250;250;250m[48;2;40;44;52m                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                [0m
[0m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch] [0m[38;2;99;109;131m[48;2;99;109;131m──────────────────────────────────────────────[0m
