stoat/src/snapshots/stoat__test_harness__review_navigate_next.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: n
focused: #1 of 1
mode: normal
size: 80x14
---
[0m[38;2;99;109;131m    3 [0m[38;2;250;250;250mc[0m                                [0m[38;2;99;109;131m│    3 [0m[38;2;250;250;250mc[0m
[0m[38;2;99;109;131m    4 [0m[38;2;250;250;250md[0m                                [0m[38;2;99;109;131m│    4 [0m[38;2;250;250;250md[0m
[0m[38;2;229;192;123ma.txt --- 2/2 --- [0m                     [0m[38;2;99;109;131m│[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  17 [0m[38;2;250;250;250mq[0m                                [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  17 [0m[7m[38;2;250;250;250mq[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  18 [0m[38;2;250;250;250mr[0m                                [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  18 [0m[38;2;250;250;250mr[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  19 [0m[38;2;250;250;250ms[0m                                [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  19 [0m[38;2;250;250;250ms[0m
[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  20 [0m[38;2;224;108;117mt[0m                                [0m[38;2;99;109;131m│[0m[1m[38;2;86;182;194m│[0m[38;2;99;109;131m  20 [0m[38;2;152;195;121mT[0m






[0m[1m[38;2;40;44;52m[48;2;97;175;239m NOR [0m[1m[38;2;250;250;250m[48;2;99;109;131m (unnamed) [0m[38;2;86;182;194m[48;2;99;109;131m review [0m[38;2;250;250;250m[48;2;99;109;131m[scratch]                                               [0m
